# M1C-FENGLONG

./: README.md
components/BLE_FTMS/: CMakeLists.txt  ble_ftms.h  ble_ftms_crossTrainer.c  ble_ftms_crossTrainer.h  ble_ftms_inDoorBike.c  ble_ftms_inDoorBike.h  fitness_machine_field.h
components/TM1652/: CMakeLists.txt  TM1652.h  TM1652_dev.c  TM1652_dev.h  TM1652_mini.c  TM1652_mini.h
components/User_BLE/: CMakeLists.txt  User_BLE.c  User_BLE.h  User_BLE_DEV.c  User_BLE_DEV.h  User_BLE_FFF0.c  User_BLE_FFF0.h  User_BLE_FTMS.c  User_BLE_FTMS.h  User_BLE_IPC.c  User_BLE_IPC.h  User_BLE_alternator.c  User_BLE_alternator.h  User_BLE_battery.c  User_BLE_battery.h
components/User_KEY/: CMakeLists.txt  User_KEY.c  User_KEY.h
components/User_LED/: CMakeLists.txt  User_LED.c  User_LED.h  hsv2rgb.c  hsv2rgb.h
components/User_NVS/: CMakeLists.txt  User_NVS.c  User_NVS.h
components/User_Protocol/: CMakeLists.txt  User_Protocol.c  User_Protocol.h
components/User_WiFi/: CMakeLists.txt  User_WiFi.c  User_WiFi.h  User_http_ota.c  User_http_ota.h
components/User_dev/: CMakeLists.txt  User_dev_ADC.c  User_dev_Vspi.c  User_dev_pwm.c  User_dev_uart1.c  User_dev_uart2.c
components/User_encoder/: CMakeLists.txt  User_encoder.c  (+1 more)
components/User_sports/: CMakeLists.txt  User_CAL_power.c  User_CAL_power.h  User_CAL_power_E80.c  User_CAL_power_E80.h  User_CAL_power_EF25EV.c  User_CAL_power_EF25EV.h  User_CAL_power_M1M.c  User_CAL_power_M1M.h  User_CAL_power_M1S.c  User_CAL_power_M1S.h  User_CAL_power_M2M.c  User_CAL_power_M2M.h  User_sports.c  User_sports.h
main/: main.c
(+18 files in other folders)
